--- a/ui/ui.html
+++ b/ui/ui.html
@@ -1,9 +1,72 @@
-<h2>Rectangle Creator</h2>
-<p>Count: <input id="count" type="number" value="5"></p>
-<button id="create">Create</button>
-<button id="cancel">Cancel</button>
-<script>
+<style>
+  body {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+    padding: 20px;
+    margin: 0;
+  }
 
+  h2 {
+    margin: 0 0 16px 0;
+    color: #333;
+  }
+
+  .input-group {
+    margin-bottom: 16px;
+  }
+
+  input[type="number"] {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #e5e5e5;
+    border-radius: 4px;
+    font-size: 14px;
+  }
+
+  .button-group {
+    display: flex;
+    gap: 8px;
+  }
+
+  button {
+    flex: 1;
+    padding: 8px 16px;
+    border-radius: 6px;
+    border: none;
+    font-size: 14px;
+    cursor: pointer;
+    transition: background-color 0.2s;
+  }
+
+  #create {
+    background-color: #18A0FB;
+    color: white;
+  }
+
+  #create:hover {
+    background-color: #0D8DE3;
+  }
+
+  #cancel {
+    background-color: #F5F5F5;
+    color: #333;
+  }
+
+  #cancel:hover {
+    background-color: #EAEAEA;
+  }
+</style>
+
+<h2>Rectangle Creator</h2>
+<div class="input-group">
+  <p>Count:</p>
+  <input id="count" type="number" value="5" min="1">
+</div>
+<div class="button-group">
+  <button id="create">Create</button>
+  <button id="cancel">Cancel</button>
+</div>
+
+<script>
 document.getElementById('create').onclick = () => {
   const textbox = document.getElementById('count');
   const count = parseInt(textbox.value, 10);
@@ -13,5 +76,4 @@ document.getElementById('create').onclick = () => {
 document.getElementById('cancel').onclick = () => {
   parent.postMessage({ pluginMessage: { type: 'cancel' } }, '*')
 }
-
 </script>
